--- a/boot01/build.gradle
+++ b/boot01/build.gradle
@@ -1,16 +1,24 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.6'
-	id 'io.spring.dependency-management' version '1.1.5'
+buildscript {
+
+	ext {
+
+		queryDslVersion = "5.0.0"
+
+	}
+
 }
 
-group = 'com.example'
+plugins {
+	id 'java'
+	id 'org.springframework.boot' version '3.1.11'
+	id 'io.spring.dependency-management' version '1.1.4'
+}
+
+group = 'kr.bit'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -26,24 +34,44 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok'
+
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-
-	testCompileOnly 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok:'
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 
 	implementation 'net.coobird:thumbnailator:0.4.19'
+
+	implementation 'com.google.code.gson:gson:2.10.1'
+
+	annotationProcessor(
+
+
+			"jakarta.persistence:jakarta.persistence-api",
+
+
+			"jakarta.annotation:jakarta.annotation-api",
+
+
+			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+
+}
+
+
+
+tasks.named('bootBuildImage') {
+	builder = 'paketobuildpacks/builder-jammy-base:latest'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+compileJava.dependsOn('clean')
